--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -475,13 +475,19 @@ jobs:
             # no-cache to keep container small
             apk add --update --no-cache tar gzip ansible aws-cli curl
             pip install awscli
-      # https://circleci.com/developer/orbs/orb/opensimsim/setup-env-vars
-      #
+      # https://circleci.com/docs/env-vars
       - run:
           name: "Store env variables in backend/.env"
           command: |
+            # CircleCI uses secrets masking 
+            # For env variables set within Project Settings or Under Contexts in
+
             echo "Environment Variable Secret Key:"
-            echo "${TYPEORM_PORT}"
+            echo "TYPEORM_PORT: ${TYPEORM_PORT}"
+            echo "Secret key variable value number of characters"
+            echo "For TYPEORM_PORT should be 4"
+            echo ${TYPEORM_PORT} | awk '{print length}'
+
             # HINT:
             ## To avoid potential errors (e.g. in parsing) don't use export e.g. echo "export TYPEORM_PORT=${TYPEORM_PORT}" > backend/.env
             ## First overwrite ">" to clear potential initial values then append ">>"
@@ -497,7 +503,11 @@ jobs:
             echo "TYPEORM_USERNAME=${TYPEORM_USERNAME}" >> backend/.env
 
             echo "Environment Variable Secret Key:"
-            echo "${TYPEORM_PORT}"
+            echo "TYPEORM_PORT: ${TYPEORM_PORT}"
+            echo "Secret key variable value number of characters"
+            echo "For TYPEORM_PORT should be 4"
+            expr length ${TYPEORM_PORT}
+
       - persist_to_workspace:
           root: ~/
           paths:
@@ -834,7 +844,7 @@ jobs:
             If yes then investigate further (backend issues usually stem from configure-infrastructure or run-migrations.)
             Check kvdb bucket for migration status
             AND/OR disable both destory-environment and revert-migration on failure in steps after infra deployed e.g. smoke-test job then:
-            ssh into the EC2 instance (ssh -i /path/key-pair-name.pem instance_user_name@instance_public_dns_name)
+            ssh into the EC2 instance (ssh -i /path/key-pair-name.pem instance_user_name@instance_public_dns_name) remember to chmod 400 pem file first if haven't so already
             then view production process manager logs (sudo pm2 monit) and (npm run start).
             For config validation error echo ${env_var_name} to find out if it is present.
             If blank address this (ensure correct variables entered in CircleCI project setting. If yes likely persitance issues)
