--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -3,7 +3,7 @@ Description: >
 
 Parameters:
   ID:
-    Description: Unique identifier.
+    Description: "Unique identifier."
     Type: String
 
 Resources:
@@ -11,15 +11,22 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: !Sub UdaPeople-${ID}
-      GroupDescription: Allow port 22 and port 3030
+      GroupDescription: "Allow port 22, 3030, and 9100 for ssh, udapeople app, and prometheus-node-exporter respectively"
       SecurityGroupIngress:
+        # ssh
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
+        # udapeople app
         - IpProtocol: tcp
           FromPort: 3030
           ToPort: 3030
+          CidrIp: 0.0.0.0/0
+        # prometheus-node-exporter
+        - IpProtocol: tcp
+          FromPort: 9100
+          ToPort: 9100
           CidrIp: 0.0.0.0/0
 
   EC2Instance:
