docs: add comments on node exporter

--- a/.circleci/ansible/roles/configure-prometheus-node-exporter/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-prometheus-node-exporter/tasks/main.yml
@@ -1,3 +1,5 @@
+# Surface Critical Server Errors for Diagnosis Using Centralized Logging
+# Setup Back-End Monitoring
 - name: "install node exporter."
   unarchive:
     src: https://github.com/prometheus/node_exporter/releases/download/v0.17.0/node_exporter-0.17.0.linux-amd64.tar.gz
@@ -10,8 +12,8 @@
     src: /tmp/node_exporter-0.17.0.linux-amd64/node_exporter
     dest: /usr/local/bin/node_exporter
     remote_src: yes
-    mode: '0777'
-    
+    mode: "0777"
+
 - name: "add node exporter configuration."
   become: true
   copy:
