attempt(fix): add npm update to scans to fix ENOAUDIT
npm ERR! audit Your configured registry (https://registry.npmjs.org/) may not support audit requests, or the audit endpoint may be temporarily unavailable.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,6 +237,7 @@ jobs:
           command: |
             cd frontend
             npm install
+            npm update
             npm audit fix --force
             npm audit --audit-level=critical
       # Custom failure reason message
@@ -258,6 +259,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm update
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             npm audit --audit-level=critical
