--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -608,14 +608,14 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/G1QN6TThopQtMadgTe64jg/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d 'SUCCESSFUL MIGRATION'
+              curl https://kvdb.io/6N6kQx9St2Af9HjHrcENfo/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               echo "PASS: Go to this URL to check migration status"
-              echo "https://kvdb.io/G1QN6TThopQtMadgTe64jg/migration_${CIRCLE_WORKFLOW_ID:0:7}"
+              echo "https://kvdb.io/6N6kQx9St2Af9HjHrcENfo/migration_${CIRCLE_WORKFLOW_ID:0:7}"
               # return 0
             else
-              curl https://kvdb.io/G1QN6TThopQtMadgTe64jg/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d 'FAILED MIGRATION'
+              curl https://kvdb.io/6N6kQx9St2Af9HjHrcENfo/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d 'FAILED MIGRATION'
               echo "FAIL: Go to this URL to check migration status"
-              echo "https://kvdb.io/G1QN6TThopQtMadgTe64jg/migration_${CIRCLE_WORKFLOW_ID:0:7}"
+              echo "https://kvdb.io/6N6kQx9St2Af9HjHrcENfo/migration_${CIRCLE_WORKFLOW_ID:0:7}"
               # return 1
             fi
 
@@ -904,6 +904,15 @@ jobs:
             apk add --update --no-cache aws-cli
             pip install awscli
       - run:
+          name: "Get blue workflow ID"
+          command: |
+            export OldWorkFlowID=$(aws cloudformation list-exports \
+              --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate \
+              --output text)
+            echo $OldWorkFlowID >> ~/HistoricWorkflowID.txt
+            cat ~/HistoricWorkflowID.txt
+      - run:
           name: "Update cloudfront distribution"
           command: |
             # your code here
@@ -913,7 +922,10 @@ jobs:
                     --stack-name InitialStack \
                     --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
                     --tags project=udapeople
-
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - HistoricWorkflowID.txt
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
@@ -932,10 +944,8 @@ jobs:
           name: "Get old stack workflow id: Dead-end production stack from Blue Green Deployment"
           command: |
             # your code here
-            export OldWorkflowID=$(aws cloudformation list-exports \
-              --query "Exports[?Name==\`Cloudfront-${CIRCLE_WORKFLOW_ID:0:7}\`].Value" \
-              --no-paginate --output text)
-
+            cat ~/HistoricWorkflowID.txt
+            tail -1 ~/HistoricWorkflowID.txt
             echo "OldWorkflowID: ${OldWorkflowID}"
             echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
 
@@ -960,6 +970,13 @@ jobs:
             else
               echo "Old stacks and files not removed"
             fi
+      # Custom failure reason message
+      - custom-failure-alert-message:
+          custom_message:
+            "If this is the first time running the workflow then will fail because no prior workflows please run another workflow.
+            If prior workflows exist ensure the OldWorkflowID is being appropriately captured."
+      # Success notification
+      - slack-success-notification
 
 # WORKFLOW
 workflows:
