--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -939,6 +939,10 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum -y install tar
       # attach workspace
       # So have access to files needed e.g. PriorWorkflowID.txt
       - attach_workspace:
