destroy env if fails

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -974,6 +974,11 @@ jobs:
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
             fi
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
       # Custom failure reason message
       - custom-failure-alert-message:
           custom_message:
