give initial stack more descriptive name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -919,7 +919,7 @@ jobs:
             echo "Blue to Green"
             aws cloudformation deploy \
                     --template-file .circleci/files/cloudfront.yml \
-                    --stack-name InitialStack \
+                    --stack-name CloudFormationStack \
                     --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
                     --tags project=udapeople
       - persist_to_workspace:
