--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -18,7 +18,7 @@ Resources:
     Properties:
       DistributionConfig:
         Origins:
-          - DomainName: !Sub "${WorkflowID}.s3.amazonaws.com" #s3 bucket reference
+          - DomainName: !Sub "udapeople-${WorkflowID}.s3.amazonaws.com" #s3 bucket reference
             Id: webpage
             S3OriginConfig:
               OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
